fix: problemas de versao